restructure navbar and fix spacing

--- a/local-addons/mes-bom-ui/static/src/components/navbar/navbar.scss
+++ b/local-addons/mes-bom-ui/static/src/components/navbar/navbar.scss
@@ -28,7 +28,7 @@
   height: 32px;
   transform: rotate(0deg);
   right: -16px;
-  top: 28px;
+  top: 36px;
   border-radius: 50%;
   background-color: var(--dayshift-50);
   border: 1px solid rgba(197, 196, 197, 1);
@@ -41,10 +41,10 @@
 }
 
 .mn__logo-box {
-  width: 120px;
+  width: 90px;
   height: 46px;
   border-radius: 8px;
-  margin: 25px 0px 17px 24px;
+  margin: 30px 0px 13px 24px;
   display: flex;
   align-items: center;
   justify-content: center;
