--- a/local-addons/mes-bom-ui/static/src/components/navbar/sub-menu.scss
+++ b/local-addons/mes-bom-ui/static/src/components/navbar/sub-menu.scss
@@ -15,8 +15,8 @@
   background: var(--background-white, #F9F9F9);
   display: flex;
   width: 276px;
-  height: 80px;
-  padding: 24px;
+  height: 105px;
+  padding: 32px 25px 30px 25px;
   align-items: center;
   gap: 10px;
 }
